[package]
publish = false
edition = "2021"
name = "demo-lsp-browser"
version = "0.0.0"

[features]
default = ["tower-lsp/runtime-agnostic"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
solang = { path = "../solang" }
futures = "0.3.21"
js-sys = "0.3.57"
tower-lsp = { version = "0.17.0", default-features = false }
tree-sitter = { version = "0.9", package = "tree-sitter-facade" }
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = { version = "0.4.30", features = ["futures-core-03-stream"] }
wasm-streams = "0.2.3"
web-tree-sitter-sys = "1.3"
tokio = { version = "1.27", features = ["rt", "macros", "sync", "io-util"] }



[dependencies.web-sys]
version = "0.3.57"
features = [
  "console",
  "HtmlTextAreaElement",
  "ReadableStream",
  "WritableStream",
]
